<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ucsd.cse110.group50.eventfinder.CreateEvent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainUI" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/nameFieldHint"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:id="@+id/eventName"
            android:maxLength="30" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:hint="@string/addressFieldHint"
            android:id="@+id/eventAddress" />


        <Button
            android:text="Place Picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/placepicker"
            android:textSize="14sp"
            android:textColor="@android:color/holo_green_dark"
            android:elevation="0dp"
            android:onClick="pickPlace"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/dateFieldHint"
                    android:clickable="true"
                    android:onClick="pickDate"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:id="@+id/eventDate"
                    android:textSize="20sp"
                    android:layout_marginTop="14dp"
                    android:textColor="#FF000000"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:hint="@string/timeFieldHint"
                    android:onClick="pickTime"
                    android:id="@+id/eventTime"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textSize="20sp"
                    android:layout_marginTop="14dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:text="@string/invalidDateMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/invalidDateMessage"
                android:visibility="invisible"
                android:textColor="#FFF44336"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eventPassArea" >

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/passOption"
                android:text="@string/passOptionLabel"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/eventPassword"
                android:hint="@string/passFieldHint"
                android:textSize="14sp"
                android:layout_weight="1"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eventRestrictionArea" >

            <Switch
                android:text="@string/restrictionsLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/restrictionsToggle"
                android:layout_weight="1" />

            <EditText
                android:layout_width="226dp"
                android:inputType="textMultiLine"
                android:ems="10"
                android:hint="@string/restrictionsHint"
                android:id="@+id/eventRestrictions"
                android:layout_height="87dp"
                android:visibility="invisible" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/eventDescription"
            android:hint="@string/descriptionHint"
            android:inputType="textMultiLine"
            android:gravity="start"
            android:ems="10"
            android:layout_weight="200"
            android:layout_height="match_parent" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/durationHint"
                android:ems="10"
                android:id="@+id/duration"
                android:layout_weight="1"
                android:maxLines="1"
                android:textAlignment="textStart"
                android:maxLength="6" />

            <TextView
                android:text="@string/durationUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/durationLabel"
                android:textSize="24sp" />

            </LinearLayout>

        <Button
            android:text="@string/createEventDoneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/doneButton"
            android:onClick="createEvent"
            android:layout_weight="1"
            tools:layout_height="wrap_content" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@android:color/background_light"
        android:alpha="0.75"
        android:visibility="invisible"
        android:id="@+id/backgroundBlur"
        tools:ignore="ContentDescription" />

    <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/timeCard"
         android:visibility="invisible"
         android:layout_alignParentBottom="true"
         android:background="@android:color/black">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TimePicker
                 android:layout_width="match_parent"
                 android:layout_height="375dp"
                 android:id="@+id/timePicker" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="?android:attr/buttonBarStyle" >

                <Button
                    android:text="Cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cancelTime"
                    android:layout_weight="1"
                    android:onClick="closeTime"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:text="Set"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/setTime"
                    android:layout_weight="1"
                    android:onClick="setTime"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateCard"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker"
            android:headerBackground="#FF1A237E"
            android:layout_alignStart="@+id/linearLayout" />

    </android.support.v7.widget.CardView>

</RelativeLayout>
