<resources>
    <string name="app_name">Event Finder</string>
    <string name="action_account">account</string>
    <string name="action_filter">filter</string>
    <string name="search_hint">search_hint</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_add_event">add event</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_user_sign_in">Sign in as user</string>
    <string name="action_organizer_sign_in">Sign in as organizer</string>
    <string name="invalidDateMessage">You can\'t create an even in the past!</string>
    <string name="nameFieldHint">Event name</string>
    <string name="addressFieldHint">Event address</string>
    <string name="dateFieldHint">Date</string>
    <string name="timeFieldHint">Time</string>
    <string name="title_event_list">Events</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="passOptionLabel">Require password?</string>
    <string name="passFieldHint">Password</string>
    <string name="restrictionsLabel">Guest restrictions?</string>
    <string name="restrictionsHint">Restrictions...</string>
    <string name="descriptionHint">Event description...</string>
    <string name="durationHint">Event duration...</string>
    <string name="durationUnit">minutes</string>
    <string name="createEventDoneButton">Create event!</string>
    <string name="dummyContents">If you see this string, an error occurs in loading description.
    </string>
    <string name="action_new_event">Create a new event</string>
    <string name="action_calendar_view">Open calendar view</string>
    <string name="to_list_view">To list view</string>
    <string name="to_map_view">To map view</string>
    <string name="to_my_activities">Go to My Activities</string>
    <string name="to_nearby_events">Go to nearby events</string>
    <string name="save_filter">Save filter</string>
    <string name="new_name_hint">Display name</string>
    <string name="new_user_title">Register as a new user!</string>
    <string name="register_button_text">Register!</string>

    <string name="locked_event_data">[LOCKED]</string>
    <string name="prompt_user_to_enter_password">Please enter the password for this event.</string>
    <string name="button_see_detial">Done</string>
    <string name="event_filter_within_time">Filter events within time:</string>

</resources>