<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_open_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ucsd.cse110.group50.eventfinder.OpenFilter">

    <TextView
        android:text="@string/event_filter_within_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="21dp"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textColor="@color/bodyTextColor" />

    <Button
        android:text="A Week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="19dp"
        android:id="@+id/filter_event_within_a_week"
        android:onClick="aweek" />

    <Button
        android:text="None"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/event_filter_none"
        android:layout_below="@+id/filter_event_within_a_week"
        android:layout_alignStart="@+id/filter_event_within_a_week"
        android:onClick="filter_none" />

    <Button
        android:text="Done!"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_filter_done_button"
        android:onClick="event_filter_done"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/event_filter_none"
        android:layout_alignStart="@+id/event_filter_none" />

    <Button
        android:text="A Month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/filter_event_within_a_month"
        android:onClick="amonth"
        android:layout_alignBaseline="@+id/filter_event_within_a_week"
        android:layout_alignBottom="@+id/filter_event_within_a_week"
        android:layout_toEndOf="@+id/filter_event_within_a_week" />

    <Button
        android:text="6 Months"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/filter_event_within_6_months"
        android:onClick="sixmonths"
        android:layout_alignBaseline="@+id/filter_event_within_a_month"
        android:layout_alignBottom="@+id/filter_event_within_a_month"
        android:layout_toEndOf="@+id/filter_event_within_a_month" />

</RelativeLayout>
