package edu.ucsd.cse110.group50.eventfinder;


import android.support.test.espresso.ViewInteraction;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.Espresso.pressBack;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.scrollTo;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withContentDescription;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withParent;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

@RunWith(AndroidJUnit4.class)
public class EventDetailTest {

    @Rule
    public ActivityTestRule<MapView> mActivityTestRule = new ActivityTestRule<>(MapView.class);

    /**
     * Given I am logged in
     * And users have added at least one event in all events page,
     * When I click an event card
     * Then a new page showed up with details of this event that I clicked.
     *
     * Given... the same pre-condition above,
     * When I click the filter,
     * Then it redirects to filter page,
     * When I click on a time to filter within,
     * And I click done,
     * Then cardlist should refresh with the filtered events.
     */
    @Test
    public void eventDetailTest() {


        ViewInteraction bottomBarTab = onView(
                allOf(withId(R.id.list_item),
                        withParent(allOf(withId(R.id.bb_bottom_bar_item_container),
                                withParent(withId(R.id.bb_bottom_bar_outer_container)))),
                        isDisplayed()));
        bottomBarTab.perform(click());

        ViewInteraction recyclerView = onView(
                allOf(withId(R.id.cardList), isDisplayed()));
        recyclerView.perform(actionOnItemAtPosition(1, click()));

        pressBack();

        ViewInteraction actionMenuItemView = onView(
                allOf(withId(R.id.action_filter_toolbar), withText("filter"), withContentDescription("filter"), isDisplayed()));
        actionMenuItemView.perform(click());

        ViewInteraction appCompatButton = onView(
                allOf(withId(R.id.filter_event_within_a_week), withText("A Week"),
                        withParent(allOf(withId(R.id.activity_open_filter),
                                withParent(withId(android.R.id.content)))),
                        isDisplayed()));
        appCompatButton.perform(click());

        ViewInteraction appCompatButton2 = onView(
                allOf(withId(R.id.event_filter_done_button), withText("Done!"),
                        withParent(allOf(withId(R.id.activity_open_filter),
                                withParent(withId(android.R.id.content)))),
                        isDisplayed()));
        appCompatButton2.perform(click());

        ViewInteraction actionMenuItemView2 = onView(
                allOf(withId(R.id.action_filter_toolbar), withText("filter"), withContentDescription("filter"), isDisplayed()));
        actionMenuItemView2.perform(click());

        ViewInteraction appCompatButton3 = onView(
                allOf(withId(R.id.event_filter_none), withText("None"),
                        withParent(allOf(withId(R.id.activity_open_filter),
                                withParent(withId(android.R.id.content)))),
                        isDisplayed()));
        appCompatButton3.perform(click());

        ViewInteraction appCompatButton4 = onView(
                allOf(withId(R.id.event_filter_done_button), withText("Done!"),
                        withParent(allOf(withId(R.id.activity_open_filter),
                                withParent(withId(android.R.id.content)))),
                        isDisplayed()));
        appCompatButton4.perform(click());

        ViewInteraction actionMenuItemView3 = onView(
                allOf(withId(R.id.action_filter_toolbar), withText("filter"), withContentDescription("filter"), isDisplayed()));
        actionMenuItemView3.perform(click());

        ViewInteraction appCompatButton5 = onView(
                allOf(withId(R.id.filter_event_within_a_week), withText("A Week"),
                        withParent(allOf(withId(R.id.activity_open_filter),
                                withParent(withId(android.R.id.content)))),
                        isDisplayed()));
        appCompatButton5.perform(click());

        ViewInteraction appCompatButton6 = onView(
                allOf(withId(R.id.event_filter_done_button), withText("Done!"),
                        withParent(allOf(withId(R.id.activity_open_filter),
                                withParent(withId(android.R.id.content)))),
                        isDisplayed()));
        appCompatButton6.perform(click());

        ViewInteraction recyclerView2 = onView(
                allOf(withId(R.id.cardList),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.container),
                                        0),
                                0),
                        isDisplayed()));
        recyclerView2.check(matches(isDisplayed()));

    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
